Add the raandom section

--- a/html/test1.html
+++ b/html/test1.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <div class = "Calculator">
+        <div class = "Calculator">Calculator using html
             <div class = "Top">Calculator
                 <div class = "input">
                     <div class = "value 1 ">
