--- a/html/test1.html
+++ b/html/test1.html
@@ -36,8 +36,15 @@
 
             <div class = "Somme">
                 <h2>Somme :</h2>
-
-
+            </div>
+            <div class = "random case ">
+                <h4>Random value </h4>
+                <input
+                    onInput ="Random value "
+                    placeholder ="Random value "
+                />
+            
+            </div>
 
 
         </div>
